⚠️ Cables look much better