@@ -6,18 +6,16 @@ import net.minecraft.core.Direction;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.world.InteractionHand;
-import net.minecraft.world.InteractionResult;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.Items;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.phys.Vec3;
-import org.modogthedev.superposition.Superposition;
+import org.jetbrains.annotations.Nullable;
 import org.modogthedev.superposition.client.renderer.CableRenderer;
 import org.modogthedev.superposition.core.SuperpositionMessages;
 import org.modogthedev.superposition.networking.packet.CableSyncS2CPacket;
 import org.modogthedev.superposition.networking.packet.PlayerDropCableC2SPacket;
 import org.modogthedev.superposition.networking.packet.PlayerGrabCableC2SPacket;
-import org.modogthedev.superposition.util.Mth;
 import org.modogthedev.superposition.util.SuperpositionConstants;
 import org.modogthedev.superposition.util.Vec3LerpComponent;
 import oshi.util.tuples.Pair;
@@ -26,43 +24,41 @@ import java.awt.*;
 import java.util.*;
 
 public class CableManager {
-    private static final HashMap<Level, HashMap<UUID, Cable>> cables = new HashMap<>();
-    private static final HashMap<Player, Cable> playersDraggingCables = new HashMap<>();
-    private static final HashMap<Level, HashMap<UUID, Cable>> clientCables = new HashMap<>();
-    private static final HashMap<Player, Cable> clientPlayersDraggingCables = new HashMap<>();
+    private static final Map<Level, Map<UUID, Cable>> cables = new HashMap<>();
+    private static final Map<Player, Cable> playersDraggingCables = new HashMap<>();
+    private static final Map<Level, Map<UUID, Cable>> clientCables = new HashMap<>();
+    private static final Map<Player, Cable> clientPlayersDraggingCables = new HashMap<>();
     private static int grabTimer = 0;
 
-    private static void ifAbsent(Level level) {
-        if (!getCablesMap(level).containsKey(level)) {
-            getCablesMap(level).put(level, new HashMap<>());
-        }
+    public static Map<Level, Map<UUID, Cable>> getCablesMap(Level level) {
+        return level.isClientSide() ? clientCables : cables;
     }
 
-    public static HashMap<Level, HashMap<UUID, Cable>> getCablesMap(Level level) {
-        return level.isClientSide ? clientCables : cables;
+    public static @Nullable Map<UUID, Cable> getCables(Level level) {
+        return level.isClientSide() ? clientCables.get(level) : cables.get(level);
     }
 
-    public static Collection<Cable> getCables(Level level) {
-        return level.isClientSide ? clientCables.get(level).values() : cables.get(level).values();
-    }
-
-    public static HashMap<Player, Cable> getPlayersDraggingCablesMap(Level level) {
-        return level.isClientSide ? playersDraggingCables : clientPlayersDraggingCables;
+    public static Map<Player, Cable> getPlayersDraggingCablesMap(Level level) {
+        return level.isClientSide() ? playersDraggingCables : clientPlayersDraggingCables;
     }
 
     public static void tick(ServerLevel level) {
-        ifAbsent(level);
-        for (Cable cable : getCables(level)) {
-            cable.updatePhysics();
-        }
-        dragPlayers(level);
-        for (UUID uuid : getCablesMap(level).get(level).keySet()) {
-            Cable cable = getCablesMap(level).get(level).get(uuid);
-            CableSyncS2CPacket packet = new CableSyncS2CPacket(cable, uuid, false);
-            for (ServerPlayer player : level.getServer().getPlayerList().getPlayers()) {
-                float maxDistance = cable.getPoints().size() + 100;
-                if (cable.getPoints().get(0).getPosition().distanceTo(player.position()) < maxDistance)
-                    SuperpositionMessages.sendToPlayer(packet, player);
+        Map<UUID, Cable> cables = getCables(level);
+        if (cables != null) {
+            for (Cable cable : cables.values()) {
+                cable.updatePhysics();
+            }
+            dragPlayers(level);
+
+            for (Map.Entry<UUID, Cable> entry : cables.entrySet()) {
+                Cable cable = entry.getValue();
+                CableSyncS2CPacket packet = new CableSyncS2CPacket(cable, entry.getKey(), false);
+                for (ServerPlayer player : level.getServer().getPlayerList().getPlayers()) {
+                    float maxDistance = cable.getPoints().size() + 100;
+                    if (cable.getPoints().getFirst().getPosition().distanceTo(player.position()) < maxDistance) {
+                        SuperpositionMessages.sendToPlayer(packet, player);
+                    }
+                }
             }
         }
     }
@@ -72,69 +68,77 @@ public class CableManager {
             grabTimer--;
         if (CableRenderer.detachDelta > 0)
             CableRenderer.detachDelta = CableRenderer.detachDelta - 0.2f;
-        ifAbsent(level);
         CableRenderer.stretch = 0;
-        for (Cable cable : getCables(level)) {
-            cable.updatePhysics();
+        Map<UUID, Cable> cables = getCables(level);
+        if (cables != null) {
+            for (Cable cable : cables.values()) {
+                cable.updatePhysics();
+            }
+            dragPlayers(level);
         }
-        dragPlayers(level);
     }
 
     public static void dragPlayers(Level level) {
-        for (Cable cable : getCables(level)) {
-            for (UUID uuid : cable.getPlayerHoldingPointMap().keySet()) {
-                Player player = level.getPlayerByUUID(uuid);
-                float longestSegment = 0f;
-                for (int i = 1; i < (cable.getPoints().size()); i++) {
-                    if (longestSegment < cable.getPoints().get(i).getLength())
-                        longestSegment = cable.getPoints().get(i).getLength();
+            for (Cable cable : getLevelCables(level)) {
+                for (int id : cable.getPlayerHoldingPointMap().keySet()) {
+                    if (level.getEntity(id) instanceof Player player) {
+                        float longestSegment = 0f;
+                        for (int i = 1; i < (cable.getPoints().size()); i++) {
+                            if (longestSegment < cable.getPoints().get(i).getLength())
+                                longestSegment = cable.getPoints().get(i).getLength();
+                        }
+                        Pair<Cable.Point, Integer> pointIndexPair = cable.getPlayerHeldPoint(id);
+                        Cable.Point playerPoint = pointIndexPair.getA();
+                        Vec3 holdGoalPos = player.getEyePosition().add(player.getEyePosition().add(player.getForward().subtract(player.getEyePosition())).scale(2));
+                    }
                 }
-                Pair<Cable.Point, Integer> pointIndexPair = cable.getPlayerHeldPoint(uuid);
-                Cable.Point playerPoint = pointIndexPair.getA();
-                Vec3 holdGoalPos = player.getEyePosition().add(player.getEyePosition().add(player.getForward().subtract(player.getEyePosition())).scale(2));
-            }
         }
     }
 
-    public static void playerUsesCable(Player player, Vec3 vec3, Color color) {
-        for (Cable cable : getCables(player.level())) {
-            if (cable.hasPlayerHolding(player.getUUID())) {
-                playerFinishDraggingCable(player, vec3);
-                return;
+    public static void playerUsesCable(Player player, BlockPos pos, Color color, Direction face) {
+            for (Cable cable : getLevelCables(player.level())) {
+                if (cable.hasPlayerHolding(player.getId())) {
+                    playerFinishDraggingCable(player, pos, face);
+                    return;
+                }
             }
-        }
-        playerStartCable(vec3, player.level(), player, color);
+            playerStartCable(pos, face, player.level(), player, color);
     }
 
     public static UUID getCableUUID(Level level, Cable cable) {
-        for (UUID uuid : getCablesMap(level).get(level).keySet()) {
-            if (cable.equals(getCablesMap(level).get(level).get(uuid)))
-                return uuid;
+        Map<UUID, Cable> cables = getCablesMap(level).get(level);
+        if(cables==null){
+            return null;
+        }
+
+        for (Map.Entry<UUID, Cable> entry : cables.entrySet()) {
+            if (cable.equals(entry.getValue()))
+                return entry.getKey();
         }
         return null;
     }
 
 
     public static EventResult playerUseEvent(Player player, InteractionHand hand, BlockPos pos, Direction face) {
-        Vec3 anchorPosition = pos.getCenter().add(pos.getCenter().subtract(pos.relative(face).getCenter()).scale(-0.45));
         if (player.isShiftKeyDown()) {
             if (player.getItemInHand(hand).is(Items.AIR)) {
-                for (Cable cable : getCables(player.level())) {
-                    if (cable.hasPlayerHolding(player.getUUID())) {
-                        playerFinishDraggingCable(player, anchorPosition);
-                        return EventResult.interruptTrue();
+                int id = player.getId();
+                    for (Cable cable : getLevelCables(player.level())) {
+                        if (cable.hasPlayerHolding(id)) {
+                            playerFinishDraggingCable(player, pos, face);
+                            return EventResult.interruptTrue();
+                        }
                     }
-                }
                 CableClipResult cableClipResult = new CableClipResult(player.getEyePosition(), 8, player.level());
                 Pair<Cable, Cable.Point> rayCast = cableClipResult.rayCastForClosest(player.getEyePosition().add(player.getEyePosition().add(player.getForward().subtract(player.getEyePosition())).scale(5)), .7f);
                 if (rayCast != null) {
                     Cable cable = rayCast.getA();
-                    cable.addPlayerHoldingPoint(player.getUUID(), cable.getPointIndex(rayCast.getB()));
+                    cable.addPlayerHoldingPoint(id, cable.getPointIndex(rayCast.getB()));
                     if (!player.level().isClientSide) {
                         CableSyncS2CPacket packet = new CableSyncS2CPacket(cable, getCableUUID(player.level(), cable), false);
                         for (ServerPlayer player1 : player.level().getServer().getPlayerList().getPlayers()) {
                             float maxDistance = cable.getPoints().size() + 100;
-                            if (cable.getPoints().get(0).getPosition().distanceTo(player.position()) < maxDistance)
+                            if (cable.getPoints().getFirst().getPosition().distanceToSqr(player.position()) < maxDistance*maxDistance)
                                 SuperpositionMessages.sendToPlayer(packet, player1);
                         }
                     }
@@ -149,12 +153,16 @@ public class CableManager {
         if (grabTimer == 0) {
             grabTimer = 4;
             if (player.isShiftKeyDown()) {
+                int id = player.getId();
                 if (player.getItemInHand(hand).is(Items.AIR)) {
-                    for (Cable cable : getCables(player.level())) {
-                        if (cable.hasPlayerHolding(player.getUUID())) {
-                            cable.stopPlayerDrag(player.getUUID());
-                            SuperpositionMessages.sendToServer(new PlayerDropCableC2SPacket());
-                            return;
+                    Map<UUID, Cable> cables = getCables(player.level());
+                    if (cables != null) {
+                        for (Cable cable : cables.values()) {
+                            if (cable.hasPlayerHolding(id)) {
+                                cable.stopPlayerDrag(id);
+                                SuperpositionMessages.sendToServer(new PlayerDropCableC2SPacket());
+                                return;
+                            }
                         }
                     }
                 }
@@ -163,12 +171,12 @@ public class CableManager {
                 if (rayCast != null) {
                     SuperpositionMessages.sendToServer(new PlayerGrabCableC2SPacket());
                     Cable cable = rayCast.getA();
-                    cable.addPlayerHoldingPoint(player.getUUID(), cable.getPointIndex(rayCast.getB()));
+                    cable.addPlayerHoldingPoint(id, cable.getPointIndex(rayCast.getB()));
                     if (!player.level().isClientSide) {
                         CableSyncS2CPacket packet = new CableSyncS2CPacket(cable, getCableUUID(player.level(), cable), false);
                         for (ServerPlayer player1 : player.level().getServer().getPlayerList().getPlayers()) {
                             float maxDistance = cable.getPoints().size() + 100;
-                            if (cable.getPoints().get(0).getPosition().distanceTo(player.position()) < maxDistance)
+                            if (cable.getPoints().getFirst().getPosition().distanceTo(player.position()) < maxDistance)
                                 SuperpositionMessages.sendToPlayer(packet, player1);
                         }
                     }
@@ -177,68 +185,88 @@ public class CableManager {
         }
     }
 
-    private static void playerStartCable(Vec3 pos, Level level, Player player, Color color) {
+    private static void playerStartCable(BlockPos pos, Direction face, Level level, Player player, Color color) {
         if (player.level().isClientSide)
             return;
-        Cable newCable = new Cable(pos, player.getRopeHoldPosition(0), SuperpositionConstants.cableSpawnAmount, level, color);
+        Vec3 anchorPosition = Cable.getAnchoredPoint(pos, face);
+        Cable newCable = new Cable(anchorPosition, player.getRopeHoldPosition(0), SuperpositionConstants.cableSpawnAmount, level, color);
+        newCable.getPoints().getFirst().setAnchor(pos, face);
         newCable.setPlayerHolding(player);
         addCable(newCable, level, UUID.randomUUID());
     }
 
-    public static void playerFinishDraggingCable(Player player, Vec3 vec3) {
-        for (Cable cable : getCables(player.level())) {
-            if (cable.hasPlayerHolding(player.getUUID())) {
-                Pair<Cable.Point, Integer> pointIndexPair = cable.getPlayerHeldPoint(player.getUUID());
-                Cable.Point anchorPoint = new Cable.Point(pointIndexPair.getA().getPosition());
-                anchorPoint.lerpedPos = new Vec3LerpComponent(vec3, anchorPoint.getPosition(), 5);
-                cable.replacePointAtIndex(pointIndexPair.getB(), anchorPoint);
-                cable.stopPlayerDrag(player.getUUID());
-                if (!player.level().isClientSide) {
-                    CableSyncS2CPacket packet = new CableSyncS2CPacket(cable, getCableUUID(player.level(), cable), false);
-                    for (ServerPlayer player1 : player.level().getServer().getPlayerList().getPlayers()) {
-                        float maxDistance = cable.getPoints().size() + 100;
-                        if (cable.getPoints().get(0).getPosition().distanceTo(player.position()) < maxDistance)
-                            SuperpositionMessages.sendToPlayer(packet, player1);
+    public static void playerFinishDraggingCable(Player player, BlockPos pos, Direction face) {
+            for (Cable cable : getLevelCables(player.level())) {
+                int id = player.getId();
+                if (cable.hasPlayerHolding(id)) {
+                    Pair<Cable.Point, Integer> pointIndexPair = cable.getPlayerHeldPoint(id);
+                    Cable.Point anchorPoint = new Cable.Point(pointIndexPair.getA().getPosition());
+                    Vec3 anchorPosition = pos.getCenter();
+                    if (face != null) {
+                        anchorPosition = Cable.getAnchoredPoint(pos, face);
+                        anchorPoint.setAnchor(pos, face);
+                    }
+                    anchorPoint.lerpedPos = new Vec3LerpComponent(anchorPosition, anchorPoint.getPosition(), 5);
+                    cable.replacePointAtIndex(pointIndexPair.getB(), anchorPoint);
+                    cable.stopPlayerDrag(id);
+                    if (!player.level().isClientSide) {
+                        CableSyncS2CPacket packet = new CableSyncS2CPacket(cable, getCableUUID(player.level(), cable), false);
+                        for (ServerPlayer player1 : player.level().getServer().getPlayerList().getPlayers()) {
+                            float maxDistance = cable.getPoints().size() + 100;
+                            if (cable.getPoints().getFirst().getPosition().distanceTo(player.position()) < maxDistance)
+                                SuperpositionMessages.sendToPlayer(packet, player1);
+                        }
                     }
                 }
-            }
         }
     }
 
     public static void playerExtendsCable(Player player, int amount) {
-        for (Cable cable : getCables(player.level())) {
-            if (cable.hasPlayerHolding(player.getUUID())) {
-                int index = cable.getPlayerHeldPoint(player.getUUID()).getB();
-                cable.stopPlayerDrag(player.getUUID());
-                for (int i = 0; i < amount; i++)
-                    cable.addPointAtIndex(index, new Cable.Point(player.getEyePosition().add(player.getEyePosition().add(player.getForward().subtract(player.getEyePosition())).scale(3))));
-                cable.addPlayerHoldingPoint(player.getUUID(), index + amount);
+            for (Cable cable : getLevelCables(player.level())) {
+                int id = player.getId();
+                if (cable.hasPlayerHolding(id)) {
+                    int index = cable.getPlayerHeldPoint(id).getB();
+                    cable.stopPlayerDrag(id);
+                    for (int i = 0; i < amount; i++)
+                        cable.addPointAtIndex(index, new Cable.Point(player.getEyePosition().add(player.getEyePosition().add(player.getForward().subtract(player.getEyePosition())).scale(3))));
+                    cable.addPlayerHoldingPoint(id, index + amount);
+                }
             }
-        }
     }
 
     public static void playerShrinksCable(Player player) {
-        for (Cable cable : getCables(player.level())) {
-            if (cable.hasPlayerHolding(player.getUUID())) {
-                int index = cable.getPlayerHeldPoint(player.getUUID()).getB();
-                cable.stopPlayerDrag(player.getUUID());
+        Map<UUID, Cable> cables = getCables(player.level());
+        if (cables == null) {
+            return;
+        }
+
+        for (Map.Entry<UUID, Cable> entry : cables.entrySet()) {
+            Cable cable = entry.getValue();
+            if (cable.getPoints().size() < 4) {
+                removeCable(entry.getKey());
+                return;
+            }
+
+            int id = player.getId();
+            if (cable.hasPlayerHolding(id)) {
+                int index = cable.getPlayerHeldPoint(id).getB();
+                cable.stopPlayerDrag(id);
                 cable.getPoints().remove(index);
-                cable.addPlayerHoldingPoint(player.getUUID(), index - 1);
+                cable.addPlayerHoldingPoint(id, index - 1);
             }
         }
     }
 
     public static void addCable(Cable cable, Level level, UUID uuid) {
-        ifAbsent(level);
-        getCablesMap(level).get(level).put(uuid, cable);
+        getCablesMap(level).computeIfAbsent(level, unused -> new HashMap<>()).put(uuid, cable);
     }
 
     public static Collection<Cable> getLevelCables(Level level) {
-        ifAbsent(level);
-        return getCables(level);
+        Map<UUID, Cable> cables = getCables(level);
+        return cables != null ? cables.values() : Collections.emptyList();
     }
 
-    public static Collection<Cable> getPlayerDraggingCables(Level level) {
-        return (getPlayersDraggingCablesMap(level).values());
+    public static void removeCable(UUID cableId) {
+
     }
 }
